Mailfilter ChangeLog
-=-=-=-=-=-=-=-=-=-=

Sun Jan 18 19:11:38 EST 2009 baueran

- src/apop.cc: fix strlen dependency by including cstring
- *: update email address and copyright information

Sat Sep 15 17:48:33 EST 2007 baueran

- src/socket.cc: update licensing to reflect SSL use
- README: update licensing to reflect SSL use
- TODO: remove

2007-03-12 07:25:35 -0700 (Mon, 12 Mar 2007)  baueran

- src/Makefile.am: make getopt conditional on GETOPT
- configure.ac: add GETOPT conditional to check getopt

2007-03-12 07:31:00 -0700 (Mon, 12 Mar 2007)  baueran

- man/mailfilter*: reflect recent date

2007-03-03 13:14:15 -0800 (Sat, 03 Mar 2007)  baueran 
                                                                                
- src/mailfilter.cc: add return_val to capture failed attempt to check          
  mailbox for spam
- src/socket.cc: syntax change

2007-01-22 14:00:26 -0800 (Mon, 22 Jan 2007)  baueran

- src/i18n.hh: remove                                                           
- src/apop.cc, src/preferences.cc, src/rcfile.yy,                               
  src/pop3.cc, src/rfc822.yy, src/feedback.cc,                                  
  src/rcfile.ll, src/header.cc, src/socket.cc,                                  
  src/account.cc, src/mailfilter.hh, src/weeder.cc,                             
  src/Makefile.am, src/mailfilter.cc: remove all references                     
  to gettext, replace occurrences of "\n" with endl in the                      
  mailfilter output messages                                                    

Mon Jan  1 14:37:49 CET 2007  Andreas Bauer  <baueran@gmail.com>

 * configure.ac: remove all m4 and gettext references
 * Makefile.am: reflect changes

Sun Dec 31 21:40:38 CET 2006  Andreas Bauer  <baueran@in.tum.de>

 * configure.ac: update version number and copyright information
 * src/preferences.*: use singleton design pattern
 * src/rcfile.yy: reflect changes
 * src/mailfilter.cc: reflect changes